--- a/src/main/resources/public/app/partials/git.html
+++ b/src/main/resources/public/app/partials/git.html
@@ -104,7 +104,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" ng-disabled="!selectedApp.status.changed  || selectedApp.status.changed.length === 0" ng-click="commit(selectedApp.name, selectedApp.commitMessage)" class="btn btn-primary">Commit</button>
+                <button type="button" ng-disabled="!selectedApp.status.changed  || selectedApp.status.changed.length === 0" ng-click="commit(selectedApp.id, selectedApp.commitMessage)" class="btn btn-primary">Commit</button>
             </div>
         </div>
     </div>
