--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -5,3 +5,7 @@ body {
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
     font-weight:600;
 }
+
+.cursor-pointer {
+    cursor:pointer;
+}
