Added icon for Add Repository

--- a/src/main/resources/public/app/partials/git.html
+++ b/src/main/resources/public/app/partials/git.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row" style="margin-bottom:10px;">
         <button class="btn btn-sm  btn-default" ng-click="refresh()"><span class="octicon octicon-sync"></span> Refresh</button>
-        <button class="btn btn-sm btn-default" ng-click="showAddRepositoryModal()">Add Repository</button>
+        <button class="btn btn-sm btn-default" ng-click="showAddRepositoryModal()"><i class="fa fa-plus"></i> Add Repository</button>
     </div>
     <div class="row">
         <div class="col-md-3">
